frontend/style.scss
@use '@material/circular-progress';
@use '@material/floating-label/mdc-floating-label';
@use '@material/line-ripple/mdc-line-ripple';
@use '@material/linear-progress';
@use '@material/notched-outline/mdc-notched-outline';
@use '@material/ripple';
@use '@material/slider/styles' as sliderStyles;
@use '@material/switch/styles' as switchStyles;
@use '@material/textfield';

@include linear-progress.core-styles;
@include textfield.core-styles;

// Not visible here:
//
// JavaScript sets global theming variables, of the form `--reflex-global-...`.

// Theme Switcheroos
.reflex-switcheroo-primary {
    // Theme colors
    --reflex-local-accent-color: var(--reflex-global-accent-color);
    --reflex-local-accent-color-variant: var(
        --reflex-global-accent-color-variant
    );

    // Text styles
    --reflex-local-text-color: var(--reflex-global-text-on-accent-color);

    // Material Design Web
    // TODO
}

.reflex-switcheroo-accent {
    // Theme colors
    --reflex-local-accent-color: var(--reflex-global-primary-color);
    --reflex-local-accent-color-variant: var(
        --reflex-global-primary-color-variant
    );

    // Text styles
    --reflex-local-text-color: var(--reflex-global-text-on-primary-color);

    // Material Design Web
    // TODO
}

.reflex-switcheroo-success {
    // Theme colors
    --reflex-local-accent-color: var(--reflex-global-success-color);
    --reflex-local-accent-color-variant: var(
        --reflex-global-success-color-variant
    );

    // Text styles
    --reflex-local-text-color: var(--reflex-global-text-on-primary-color);

    // Material Design Web
    // TODO
}

.reflex-switcheroo-warning {
    // Theme colors
    --reflex-local-accent-color: var(--reflex-global-warning-color);
    --reflex-local-accent-color-variant: var(
        --reflex-global-warning-color-variant
    );

    // Text styles
    --reflex-local-text-color: var(--reflex-global-text-on-primary-color);

    // Material Design Web
    // TODO
}

.reflex-switcheroo-danger {
    // Theme colors
    --reflex-local-accent-color: var(--reflex-global-danger-color);
    --reflex-local-accent-color-variant: var(
        --reflex-global-danger-color-variant
    );

    // Text styles
    --reflex-local-text-color: var(--reflex-global-text-on-primary-color);

    // Material Design Web
    // TODO
}

.reflex-switcheroo-surface {
    // Theme colors
    --reflex-local-accent-color: var(--reflex-global-accent-color);
    --reflex-local-accent-color-variant: var(
        --reflex-global-accent-color-variant
    );

    // Text styles
    --reflex-local-text-color: var(--reflex-global-text-on-surface-color);

    // Material Design Web
    --mdc-theme-primary: var(--reflex-global-accent-color);
    --mdc-theme-secondary: var(--reflex-global-accent-color-variant);
    --mdc-theme-surface: var(--reflex-global-surface-color);
    --mdc-theme-background: var(--reflex-global-background-color);

    --mdc-theme-on-primary: var(--reflex-global-text-on-surface-color);
    --mdc-theme-on-secondary: var(--reflex-global-text-on-surface-color);
    --mdc-theme-on-surface: var(--reflex-global-text-on-surface-color);
}

.reflex-switcheroo-disabled {
    // Theme colors
    --reflex-local-accent-color: var(--reflex-global-disabled-color);
    --reflex-local-accent-color-variant: var(
        --reflex-global-disabled-color-variant
    );

    // Text styles
    --reflex-local-text-color: var(--reflex-global-text-on-surface-color);

    // Material Design Web
    // TODO
}

.reflex-switcheroo-custom {
    // Theme colors
    --reflex-local-accent-color: var(--reflex-local-custom-color);
    --reflex-local-accent-color-variant: var(
        --reflex-local-custom-color-variant
    );

    // Text styles
    --reflex-local-text-color: var(--reflex-local-custom-text-color);

    // Material Design Web
    // TODO
}

// General
.reflex-single-container > * {
    width: 100%;
    height: 100%;
}

body {
    width: 100vw;
    height: 100vh;
    margin: 0;
    padding: 0;
    font-family: Roboto, sans-serif;
    font-size: 14px;
    background: var(--reflex-background-color);
}

.reflex-widget {
    box-sizing: border-box;
}

// Align
.reflex-align > * {
    position: relative;
}

// Margin
.reflex-margin > * {
    position: relative;
}

// Column
.reflex-column {
    display: flex;
    flex-direction: column;
    align-items: stretch;
}

// Row
.reflex-row {
    display: flex;
    flex-direction: row;
    align-items: stretch;
}

// Grid
.reflex-grid {
    display: grid;
}

// Text
.reflex-text {
    display: flex;
    align-items: center;
    justify-content: center;
}

// Rectangle
.reflex-rectangle {
    border-style: solid;

    transition-timing-function: ease; // The transition time is set via JS

    /*
    The following attributes are controlled via variables, to allow JavaScript
    to change them, even on pseudo-classes.
    */
    background: var(--rectangle-background);
    border-color: var(--rectangle-stroke-color);
    border-width: var(--rectangle-stroke-width);
    border-radius: var(--rectangle-corner-radius-top-left)
        var(--rectangle-corner-radius-top-right)
        var(--rectangle-corner-radius-bottom-right)
        var(--rectangle-corner-radius-bottom-left);
    box-shadow: var(--rectangle-shadow-offset-x)
        var(--rectangle-shadow-offset-y) var(--rectangle-shadow-radius)
        var(--rectangle-shadow-color);
}

.reflex-rectangle-hover:hover {
    background: var(--rectangle-background-hover);
    border-color: var(--rectangle-stroke-color-hover);
    border-width: var(--rectangle-stroke-width-hover);
    border-radius: var(--rectangle-corner-radius-top-left-hover)
        var(--rectangle-corner-radius-top-right-hover)
        var(--rectangle-corner-radius-bottom-right-hover)
        var(--rectangle-corner-radius-bottom-left-hover);
    box-shadow: var(--rectangle-shadow-offset-x-hover)
        var(--rectangle-shadow-offset-y-hover)
        var(--rectangle-shadow-radius-hover) var(--rectangle-shadow-color-hover);
}

// Stack
.reflex-stack > * {
    position: absolute;

    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
}

// Switch
.reflex-switch .container {
    position: relative;
    width: 3.182em;
    height: 1.548em;
    margin: auto;
    border-radius: 4.3em;
    background-color: var(--reflex-global-disabled-color-variant);
    transition: 0.3s ease all;
    z-index: 1;
}

.reflex-switch.is-on .container {
    background-color: var(--reflex-local-accent-color-variant);
}

.reflex-switch input {
    position: relative;
    width: 100%;
    height: 100%;
    padding: 0;
    margin: 0;
    opacity: 0;
    cursor: pointer;
    z-index: 3;
}

.reflex-switch .knob {
    z-index: 2;
    position: absolute;
    top: 0.172em;
    left: 0.172em;
    width: 0.86em;
    height: 0.43em;
    padding: 0.387em 0.172em;
    background-color: var(--reflex-global-disabled-color);
    border-radius: 50%;
    transition: 0.3s ease all, left 0.3s cubic-bezier(0.18, 0.89, 0.35, 1.15);
}

.reflex-switch input:active + .knob {
    width: 1.978em;
    border-radius: 4.3em;
}

.reflex-switch.is-on input:active + .knob {
    margin-left: -1.118em;
}

.reflex-switch.is-on input + .knob {
    left: 1.806em;
    background-color: var(--reflex-local-accent-color);
}

// Dropdown
.reflex-dropdown {
    min-height: 2rem;

    background-color: var(--reflex-surface-contrast-color);
    color: black;
    caret-color: var(--reflex-local-accent-color);

    border-radius: var(--reflex-global-corner-radius);
    border: 1.5px solid transparent;

    padding: 0.3rem 0.5rem;
    text-align: center;
    outline: none;
}

.reflex-dropdown:hover {
    background-color: var(--reflex-surface-color);
    border: 1.5px solid var(--reflex-local-accent-color);
}

// Progress Circle
.reflex-progress-circle {
    width: 0;
    height: 0;
    stroke: var(--reflex-local-accent-color);
}

.reflex-progress-circle circle {
    fill: none;
    stroke-width: 3.5;
    color: var(--reflex-local-accent-color);
}

.spinning svg {
    transform-origin: center;
    animation: rotate 2s linear infinite;
}

.spinning .progress {
    stroke-dasharray: 1, 200;
    stroke-dashoffset: 0;
    stroke-linecap: round;
    animation: dash 1.5s ease-in-out infinite;
}

.spinning .background {
    stroke: none;
}

.reflex-progress-circle:not(.spinning) .progress {
    stroke-dashoffset: -94.25;
    stroke-dasharray: var(--dasharray);
    transition: stroke-dasharray 0.5s ease;
}

.reflex-progress-circle:not(.spinning) .background {
    stroke: var(--background-color);
}

@keyframes rotate {
    100% {
        transform: rotate(360deg);
    }
}

@keyframes dash {
    0% {
        stroke-dasharray: 1, 200;
        stroke-dashoffset: 0;
    }
    50% {
        stroke-dasharray: 90, 200;
        stroke-dashoffset: -35px;
    }
    100% {
        stroke-dashoffset: -125px;
    }
}

// Button
.reflex-button {
    transition: background-color 0.1s ease-in-out, color 0.1s ease-in-out,
        border-color 0.1s ease-in-out;
}

.reflex-buttonstyle-major {
    background: var(--reflex-local-accent-color);
}

.reflex-buttonstyle-major:hover:not(.reflex-switcheroo-disabled) {
    background: var(--reflex-local-accent-color);
    cursor: pointer;
}

.reflex-buttonstyle-minor {
    outline: 0.15em solid var(--reflex-local-accent-color);
}

.reflex-buttonstyle-minor:hover:not(.reflex-switcheroo-disabled) {
    background: var(--reflex-local-accent-color);
    cursor: pointer;
}

.reflex-shape-pill {
    border-radius: 99999px;
}

.reflex-shape-rounded {
    border-radius: var(--reflex-global-corner-radius);
}

.reflex-shape-rectangle {
    border-radius: 0; // Not necessary, just for consistency
}

.reflex-shape-circle {
    border-radius: 50%;
}

